# cdc-who-guideline-rag-service

./: .gitignore  Makefile  README.md  docker-compose.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  pyproject.toml
backend/app/: logger.py  main.py
backend/app/agent/indexing/: context.py  edges.py  main.py  models.py  nodes.py  state.py  utils.py
backend/app/agent/react_agent/: context.py  main.py  state.py
backend/app/agent/retrieval/: main.py  nodes.py  prompts.py  state.py
backend/app/agent/retriever/: context.py  main.py  models.py  nodes.py  prompts.py  state.py
backend/app/core/: config.py  vector.py
backend/app/data/: test_web_sources.py  web_sources.py
backend/app/rag/: _smoke_test_docs.py  chunker.py  db.py  embeddings.py  indexing.py  models.py
backend/app/routes/dependencies/: chat_service.py  chunker.py  embedding.py  evaluator.py  file_store.py  indexing_agent.py  llm.py  rag.py  react_agent.py  retriever_agent.py  settings.py  tokenizer.py  vector_db.py
backend/app/routes/v1/: chat.py  main.py  rag.py
backend/app/scripts/: create_ingestion_report.py
backend/app/services/: bi_encoder.py  chat.py  rag.py  scrapper.py
backend/app/services/evaluation/: evaluator.py
backend/app/services/file_store/: context_manager.py  db.py
backend/app/services/llm/: _pricing_information.py  calculate_cost.py  factory.py  tokenizer.py
backend/app/services/rag/: rag_service.py
backend/tests/: test_smoke.py
backend/tests/app/: test_indexing_rag_service.py  test_retriever_rag_service.py
backend/tests/data/: ingestion_smoke_test.jsonl  safety_test.jsonl
deployment/: docker-compose.milvus.yml  docker-compose.yml
docs/: aws_deployment.md
