[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-protocol>=0.1.10",
    "boto3>=1.42.35",
    "crawl4ai>=0.8.0",
    "docling>=2.70.0",
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.4",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-nebius>=0.1.3",
    "langchain-nomic>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymilvus>=2.6.6",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "transformers>=4.57.6",
    "types-boto3[s3]>=1.42.35",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "types-requests>=2.32.4.20260107",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.ruff]
target-version= "py311"

[tool.ruff.lint]
# E: pycodestyle, F: pyflakes, I: isort (imports), B: bugbear (common bugs)
select = ["E", "F", "I", "B"]
ignore = []

[tool.pytest.ini_options]
pythonpath = "."
minversion = "6.0"
addopts = "-ra -v --cov=app"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests"
]

[tool.coverage.run]
omit = [
    "app/logger.py",           # Pure boilerplate
    "app/rag/_smoke_test_docs.py", # Test artifacts
    "*/__init__.py"            # Empty init files
]

[tool.coverage.report]
skip_empty = true
precision = 2
# fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
